--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
 <!-- <app-login></app-login> -->
 <!-- <app-formulaire-inscription></app-formulaire-inscription> -->
 <!-- <app-validation-participation></app-validation-participation> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<app-homepage-user></app-homepage-user>
